--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,18 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+header {
+  height: 100px;
+}
+h1 {
+  margin-top: 0;
+}
+main {
+  background-image: url(../img/chat.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -260,4 +271,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
